fix(ags): sharing indicator overlapping

--- a/.config/ags/scss/bar.scss
+++ b/.config/ags/scss/bar.scss
@@ -113,6 +113,7 @@
   .sharing {
     font-size: 1.3rem;
     margin-right: 0.5rem;
+    margin-left: 0.5rem;
     color: $onPrimary;
 
     animation: blink 1.5s ease-in-out infinite;
